--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "angular-web-storage": "^14.0.0",
     "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
     "rxjs": "~7.5.0",
